<resources>

    <string name="app_name">CaliPlay</string>

    // UserProfile Activity
    <string name="username">Username</string>
    <string name="child"><![CDATA[< 16]]></string>
    <string name="young">16 - 30</string>
    <string name="adult">31 - 50</string>
    <string name="old"><![CDATA[> 50]]></string>
    <string name="athletic">Athletic</string>
    <string name="competitive">Competitive</string>
    <string name="active">Active</string>
    <string name="sedentary">Sedentary</string>
    <string name="lifestyle">LifeStyle</string>
    <string name="sportPresent">Are you doing any sport, now?</string>
    <string name="sportPast">Did you do any sport, in the past?</string>
    <string name="chooseSport">PickSport</string>
    <string name="difficulty">How was the exercise?</string>

    // TestFeedback Activity
    <string name="very_easy">It\'s really easy! I can do much more!</string>
    <string name="easy">It\'s easy, I could do a little more</string>
    <string name="hard">It\'s a little hard, but feasible</string>
    <string name="impossible">It\'s too hard!</string>

    // Timer Activity
    <string name="strengthTest">Ready to go?</string>
    <string name="startButton">start</string>

    // ReadyTimer
    <string name="tenSeconds">Ready in</string>


    <string name="rest">Take a rest!</string>

    //YoutubePlayer
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    //Dialogue
    <string name="dialog_title"> Be careful </string>
    <string name="dialog_message"> Are you sure you want to modify the workout timer? You should use this button only in few cases and for particular reasons,
        otherwise you could compromise all the training </string>
    <string name="ok"> ok </string>
    <string name="cancel"> cancel </string>

</resources>
