<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/difficulty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/very_easy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/very_easy"
        android:onClick="result"/>

    <Button
        android:id="@+id/easy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/easy"
        android:onClick="result"/>

    <Button
        android:id="@+id/normal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/normal"
        android:onClick="result"/>

    <Button
        android:id="@+id/hard"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/hard"
        android:onClick="result"/>

    <Button
        android:id="@+id/impossible"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/impossible"
        android:onClick="result"/>

</LinearLayout>