<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textSportPresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sportPresent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray" />


        <TextView
            android:id="@+id/sportPresent"
            android:layout_width="wrap_content"
            android:layout_below="@+id/textSportPresent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sportPickerPresent"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@id/sportPresent"
            android:layout_below="@id/textSportPresent"
            android:layout_height="wrap_content"
            android:onClick="sportPresentPicker"
            android:text="@string/chooseSport"
            android:textAllCaps="false" />


        <TextView
            android:id="@+id/textSportPast"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sportPickerPresent"
            android:layout_marginLeft="10dp"
            android:text="@string/sportPast"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray" />


        <TextView
            android:id="@+id/sportPast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textSportPast"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/sportPickerPast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/sportPast"
            android:onClick="sportPastPicker"
            android:layout_below="@+id/textSportPast"
            android:text="@string/chooseSport"
            android:textAllCaps="false" />



    </RelativeLayout>

</LinearLayout>