<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/whiteGray">

        <TextView
            android:id="@+id/hintUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hintUsername"
            android:layout_marginLeft="12dp"
            android:ems="10"
            android:inputType="textPersonName" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/whiteGray">

        <TextView
            android:id="@+id/sexType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:text="Sex"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/femaleIcon"
            android:layout_width="100dp"
            android:layout_marginLeft="20dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/sexType"
            android:background="@drawable/female_selector" />

        <ImageButton
            android:id="@+id/maleIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_toRightOf="@id/femaleIcon"
            android:background="@drawable/male_selector" />

    </RelativeLayout>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:text="Age"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/darkGray"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioAge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/child"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/young"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:onClick="onRadioAge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/young"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/adult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:onClick="onRadioAge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adult"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:onClick="onRadioAge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/black" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="30dp"
            android:text="Height"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray" />

        <TextView
            android:id="@+id/weightText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:text="Weight"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/darkGray" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/height_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp" />

        <TextView
            android:id="@+id/unitMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="cm"
            android:textColor="@color/darkGray" />

        <Button
            android:id="@+id/heightPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PickHeight"
            android:textAllCaps="false" />

        <EditText
            android:id="@+id/weight_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp" />

        <TextView
            android:id="@+id/weightMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="kg"
            android:textColor="@color/darkGray" />

        <Button
            android:id="@+id/weightPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PickWeight"
            android:textAllCaps="false" />

    </LinearLayout>


</LinearLayout>